# rapidsms-smpp-gateway

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml  pre-commit.yaml  release.yaml
src/smpp_gateway/: __init__.py  admin.py  apps.py  client.py  models.py  monitoring.py  outgoing.py  queries.py  router.py  smpp.py  subscribers.py  utils.py
src/smpp_gateway/management/commands/: listen_mo_messages.py  smpp_client.py
src/smpp_gateway/migrations/: 0001_initial.py  0002_mtmessage.py  0002_mtmessagestatus.py  0003_auto_20211202_0546.py  0003_auto_20220516_1954.py  0003_big_pks_and_help_texts.py  0004_auto_20211202_1839.py  0004_translations.py  0005_alter_mtmessagestatus_command_status.py  0005_auto_20211202_1948.py  0006_message_status_indexes.py  0007_momessage_error_alter_momessage_status.py  0008_mtmessage_is_transactional.py  0008_remove_mtmessage_mt_message_status_idx_and_more.py  0009_mtmessage_error.py  0009_remove_mtmessage_is_transactional_and_more.py  0010_remove_mtmessage_mt_message_status_idx_and_more.py
tests/: conftest.py  factories.py  settings.py  test_client.py  test_queries.py  test_router.py  test_smpp_gateway.py  test_subscribers.py  utils.py
