[tool.poetry]
name = "smpp_gateway"
version = "1.1.0"
description = ""
authors = [ "Caktus Group <team@caktusgroup.com>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/caktus/rapidsms-smpp-gateway"

packages = [ { include = "smpp_gateway", from = "src" } ]

include = [ { path = "tests", format = "sdist" } ]

[tool.poetry.dependencies]
python = ">=3.8"
RapidSMS = ">=2.0"
smpplib = ">=2.2"
psycopg2 = ">=2.8"
django = ">=3.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "~7"
pre-commit = "~2.15"
black = "22.3.0"
python-semantic-release = "~7.22"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
django-stubs = "^1.10.1"

[build-system]
requires = [ "poetry-core>=1.0.0", "setuptools" ]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = [ 'py39' ]

[tool.isort]
py_version = 36
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
lines_between_types = 1
src_paths = [ "src", "tests" ]

[tool.pytest.ini_options]
addopts = "--reuse-db"
testpaths = [ "tests" ]
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [ ".", "src" ]

[tool.mypy]
plugins = [ "mypy_django_plugin.main" ]

[tool.django-stubs]
django_settings_module = "tests.settings"
